[gd_scene load_steps=2 format=3 uid="uid://cmetousbg6m8m"]

[ext_resource type="Script" path="res://Set_mode.gd" id="1_1cglh"]

[node name="Set_mode" type="Node"]
script = ExtResource("1_1cglh")

[node name="mode_1" type="Button" parent="."]
offset_left = 37.0
offset_top = 324.0
offset_right = 267.0
offset_bottom = 401.0
text = "EASY"

[node name="mode_2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -156.0
offset_right = 106.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
text = "NORMAL"

[node name="mode_3" type="Button" parent="."]
offset_left = 657.0
offset_top = 324.0
offset_right = 870.0
offset_bottom = 401.0
text = "HARD"

[node name="mode_back" type="Button" parent="."]
offset_left = 352.0
offset_top = 695.0
offset_right = 567.0
offset_bottom = 780.0
text = "BACK"

[connection signal="pressed" from="mode_1" to="." method="_on_mode_1_pressed"]
[connection signal="pressed" from="mode_2" to="." method="_on_mode_2_pressed"]
[connection signal="pressed" from="mode_3" to="." method="_on_mode_3_pressed"]
[connection signal="pressed" from="mode_back" to="." method="_on_mode_back_pressed"]
